disable precompile cache in Reth

--- a/scripts/reth/docker-compose.yaml
+++ b/scripts/reth/docker-compose.yaml
@@ -51,6 +51,7 @@ services:
       - --authrpc.jwtsecret=/tmp/jwt/jwtsecret
       - --authrpc.addr=0.0.0.0
       - --authrpc.port=8551
+      - --engine.disable-precompile-cache=true
     logging:
       driver: json-file
       options:
