--- a/scripts/nethermind/docker-compose.yaml
+++ b/scripts/nethermind/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
       - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
       - ${CHAINSPEC_PATH}:/tmp/chainspec/chainspec.json
       - /home/ubuntu/diagfiles:/nethermind/diag
+      - /root/diagfiles:/nethermind/diag
     ports:
       - "8009:8009"
       - "8545:8545"
