--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -234,6 +234,16 @@ jobs:
           name: reports
           path: reports.zip
 
+      - name: Zip trace
+        run: |
+          zip -r diag.zip /root/diagfiles
+
+      - name: Upload trace
+        uses: actions/upload-artifact@v4
+        with:
+          name: diagfiles
+          path: diag.zip
+
   populate-db:
     needs: combine-results
     runs-on: ubuntu-latest
