feat: add node exporter addon (#64)
* feat: add node exporter addon service

* feat: allow metric path specification per service

--- a/scripts/nethermind/docker-compose.yaml
+++ b/scripts/nethermind/docker-compose.yaml
@@ -57,6 +57,7 @@ services:
     labels:
       metrics_enabled: "true"
       metrics_port: "8008"
+      metrics_path: "/metrics"
       logs_enabled: "false"
       instance: "${GA_METRICS_LABELS_INSTANCE}"
   alloy:
@@ -65,6 +66,10 @@ services:
     extends:
       file: ../addons/alloy/compose.yaml
       service: alloy
+  node-exporter:
+    extends:
+      file: ../addons/node-exporter/compose.yaml
+      service: node-exporter
 networks:
   gas:
     name: gas-network
