--- a/scripts/besu/docker-compose.yaml
+++ b/scripts/besu/docker-compose.yaml
@@ -52,6 +52,7 @@ services:
     labels:
       metrics_enabled: "true"
       metrics_port: "8008"
+      metrics_path: "/metrics"
       logs_enabled: "false"
       instance: "${GA_METRICS_LABELS_INSTANCE}"
   alloy:
@@ -60,6 +61,10 @@ services:
     extends:
       file: ../addons/alloy/compose.yaml
       service: alloy
+  node-exporter:
+    extends:
+      file: ../addons/node-exporter/compose.yaml
+      service: node-exporter
 networks:
   gas:
     name: gas-network
