feat: enhance metrics and tracing support in benchmark scripts
- Added support for Loki and Pyroscope endpoints, usernames, and passwords in `run_and_post_metrics.sh`.
- Updated `run_kute.py` to utilize new environment variables for Loki and Pyroscope.
- Modified `compose.yaml` and `config.alloy` to include new environment variables for metrics and tracing.
- Enabled tracing in various client Docker Compose files (Besu, Erigon, Ethrex, Geth, Nethermind, Nimbus, Reth) by adding `traces_enabled` flag.

--- a/scripts/addons/alloy/compose.yaml
+++ b/scripts/addons/alloy/compose.yaml
@@ -17,11 +17,19 @@ services:
       METRICS_SCRAPE_INTERVAL: "12s"
       METRICS_ENDPOINT_PATH: "/metrics"
       METRICS_LABELS_INSTANCE: "${GA_METRICS_LABELS_INSTANCE}"
+      METRICS_LABELS_NETWORK: "${GA_METRICS_LABELS_NETWORK}"
       METRICS_LABELS_TESTNET: "${GA_METRICS_LABELS_TESTNET}"
       METRICS_LABELS_EXECUTION_CLIENT: "${GA_METRICS_LABELS_EXECUTION_CLIENT}"
-      PROMETHEUS_REMOTE_WRITE_URL: "${GA_PROMETHEUS_REMOTE_WRITE_URL}"
-      LOKI_REMOTE_WRITE_URL: "${GA_LOKI_REMOTE_WRITE_URL}"
+      PROMETHEUS_RW_URL: "${GA_PROMETHEUS_RW_URL}"
+      PROMETHEUS_RW_USERNAME: "${GA_PROMETHEUS_RW_USERNAME}"
+      PROMETHEUS_RW_PASSWORD: "${GA_PROMETHEUS_RW_PASSWORD}"
+      LOKI_RW_URL: "${GA_LOKI_RW_URL}"
+      LOKI_RW_USERNAME: "${GA_LOKI_RW_USERNAME}"
+      LOKI_RW_PASSWORD: "${GA_LOKI_RW_PASSWORD}"
+      PYROSCOPE_RW_URL: "${GA_PYROSCOPE_RW_URL}"
+      PYROSCOPE_RW_USERNAME: "${GA_PYROSCOPE_RW_USERNAME}"
+      PYROSCOPE_RW_PASSWORD: "${GA_PYROSCOPE_RW_PASSWORD}"
+      PYROSCOPE_LOCAL_ADDRESS: "0.0.0.0"
+      PYROSCOPE_LOCAL_PORT: "9999"
       NETHERMIND_PROJECT: "core-gas-benchmarking"
       EXTERNAL_PROVIDER: "github-gas-benchmarking"
-      BASIC_AUTH_USERNAME: "${GA_PROMETHEUS_REMOTE_WRITE_USERNAME}"
-      BASIC_AUTH_PASSWORD: "${GA_PROMETHEUS_REMOTE_WRITE_PASSWORD}"
