--- a/scripts/reth/docker-compose.yaml
+++ b/scripts/reth/docker-compose.yaml
@@ -62,6 +62,7 @@ services:
       metrics_port: "8008"
       metrics_path: "/debug/metrics/prometheus"
       logs_enabled: "false"
+      traces_enabled: "true"
       instance: "${GA_METRICS_LABELS_INSTANCE}"
   alloy:
     environment:
