--- a/scripts/erigon/docker-compose.yaml
+++ b/scripts/erigon/docker-compose.yaml
@@ -64,19 +64,15 @@ services:
     labels:
       metrics_enabled: "true"
       metrics_port: "8008"
-      metrics_path: "/debug/metrics/prometheus"
       logs_enabled: "false"
       instance: "${GA_METRICS_LABELS_INSTANCE}"
   alloy:
     environment:
       METRICS_LABELS_EXECUTION_CLIENT: "erigon"
+      METRICS_ENDPOINT_PATH: "/debug/metrics/prometheus"
     extends:
       file: ../addons/alloy/compose.yaml
       service: alloy
-  node-exporter:
-    extends:
-      file: ../addons/node-exporter/compose.yaml
-      service: node-exporter
 networks:
   gas:
     name: gas-network
