--- a/scripts/ethrex/docker-compose.yaml
+++ b/scripts/ethrex/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - execution_data:/var/lib/ethrex/data
       - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
       - ${GENESIS_PATH}:/tmp/genesis/genesis.json
+      - ${CLIENT_ARTIFACTS_DIR:-./artifacts}:/artifacts
     user: root
     ports:
       - 8008:8008/tcp
