--- a/scripts/nethermind/docker-compose.yaml
+++ b/scripts/nethermind/docker-compose.yaml
@@ -17,8 +17,8 @@ services:
       - execution_data:/nethermind/data
       - ${EC_JWT_SECRET_PATH}:/tmp/jwt/jwtsecret
       - ${CHAINSPEC_PATH}:/tmp/chainspec/chainspec.json
-      - /home/ubuntu/diagfiles:/nethermind/diag
-      - /root/diagfiles:/nethermind/diag
+      - ${CLIENT_ARTIFACTS_DIR:-./artifacts}:/artifacts
+      - ${CLIENT_ARTIFACTS_DIR:-./artifacts}/diag:/nethermind/diag
     ports:
       - "8009:8009"
       - "8545:8545"
