--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -59,6 +59,7 @@ jobs:
           CLIENTS: ${{ github.event.inputs.client }}
           TEST_PATH: ${{ github.event.inputs.test }}
           GENESIS: ${{ github.event.inputs.genesis }}
+          FILTER: ${{ github.event.inputs.filter }}
         run: |
             python3 <<'PY'
             import json
@@ -84,6 +85,8 @@ jobs:
             clients = [c.strip() for c in os.environ.get("CLIENTS", "").split(",") if c.strip()]
             test_path = os.environ.get("TEST_PATH", "").strip()
             genesis = os.environ.get("GENESIS", "").strip()
+            filter_raw = os.environ.get("FILTER", "")
+            filters = [f.strip().lower() for f in filter_raw.split(",") if f.strip()]
             matrix_cap = 256  # GitHub matrix include limit
 
             if runs < 1:
@@ -112,6 +115,17 @@ jobs:
             if not tests:
                 print(f"::error title=No tests found::No test files discovered under {test_path}")
                 sys.exit(1)
+
+            if filters:
+                filtered_tests = []
+                for t in tests:
+                    name_l = pathlib.Path(t).name.lower()
+                    if any(pat in name_l for pat in filters):
+                        filtered_tests.append(t)
+                tests = filtered_tests
+                if not tests:
+                    print(f"::error title=Filter eliminated tests::No tests matched filter(s): {', '.join(filters)}")
+                    sys.exit(1)
 
             max_shards_allowed = matrix_cap // (runs * len(clients))
             if max_shards_allowed < 1:
