--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -383,7 +383,12 @@ jobs:
         if: always()
         run: |
           mkdir -p extracted-results extracted-client-outputs
-          tar -cf all-traces.tar -C extracted-results .
+          if find extracted-results -type f -print -quit | grep -q .; then
+            tar -cf all-traces.tar -C extracted-results .
+          else
+            echo "No results found; creating empty archive."
+            tar -cf all-traces.tar --files-from /dev/null
+          fi
           if [ -d extracted-client-outputs ] && find extracted-client-outputs -type f -print -quit | grep -q .; then
             tar -rf all-traces.tar -C extracted-client-outputs .
           fi
