--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -422,6 +422,25 @@ jobs:
           compression-level: 6
           retention-days: 90
 
+      - name: Delete per-shard artifacts (results + client outputs)
+        if: always()
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO: ${{ github.repository }}
+          RUN_ID: ${{ github.run_id }}
+        run: |
+          set -euo pipefail
+          # Remove only the per-shard artifacts now that merged artifacts are uploaded.
+          gh api "repos/${REPO}/actions/runs/${RUN_ID}/artifacts" --paginate \
+            | jq -r '.artifacts[] | "\(.id) \(.name)"' \
+            | while read -r art_id art_name; do
+                if [[ "$art_name" == results-* || "$art_name" == client-outputs-* ]]; then
+                  echo "Deleting artifact: $art_name (id=$art_id)"
+                  gh api -X DELETE "repos/${REPO}/actions/artifacts/${art_id}" >/dev/null
+                fi
+              done
+
       - name: Process combined results
         run: |
           set -euo pipefail
